--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     try {
       const response = await fetch(url, options);
       const result = await response.text();
-      console.log(JSON.parse(result));
+      const resp = JSON.parse(result);
+      console.log(resp)
+      console.log(resp.sections[0].hits[0].result.image_url)
     } catch (error) {
       console.error(error);
     }
